Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman: El caballero de la noche asciende -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman: El caballero de la noche -->
+<li>
+  <a href="../Peliculas/pelicula564.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8QDQExnfNFOtabLDKqfDQuHDsIg.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Batman: El caballero de la noche 2008</span>
+    <span class="hidden">Cuando la amenaza conocida como el Joker causa estragos y caos en la gente de Ciudad Gótica, Batman debe aceptar una de las mayores pruebas psicológicas y físicas de su capacidad para luchar contra la injusticia.</span>
+  </a>
+</li>
+<!--FIN--><!-- Batman: El caballero de la noche asciende -->
 <li>
   <a href="../Peliculas/pelicula563.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
