--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman: El caballero de la noche -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Batman inicia -->
+<li>
+  <a href="../Peliculas/pelicula565.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6yMWU1vWkOBbNRIwOxhetd2aHhO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Batman inicia 2005</span>
+    <span class="hidden">Después de entrenar con su mentor, Batman comienza su lucha para liberar a Ciudad Gótica de la corrupción.</span>
+  </a>
+</li>
+<!--FIN--><!-- Batman: El caballero de la noche -->
 <li>
   <a href="../Peliculas/pelicula564.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
