--- a/Categorias/misterio/index.html
+++ b/Categorias/misterio/index.html
@@ -71,7 +71,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Dexter: Resurreccion -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Batman -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula566.html">
+    <img src="https://image.tmdb.org/t/p/original/mo7teil1qH0SxgLijnqeYP1Eb4w.jpg" alt="Batman" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Batman</div>
+  <div class="text-xs text-white/70">2022</div>
+</article><!-- Dexter: Resurreccion -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie58.html">
     <img src="https://image.tmdb.org/t/p/original/fORqf1CdugrD5oHnGYL24VZktFQ.jpg" alt="Dexter: Resurrección" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
