--- a/Plataforma/primevideo/index.html
+++ b/Plataforma/primevideo/index.html
@@ -211,7 +211,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Novata Espacial -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- The Boys -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Series/serie59.html">
+    <img src="https://image.tmdb.org/t/p/original/5kgY14oisiHcJ4zq0Xgq1e97PHm.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">The Boys</div>
+  <div class="text-xs text-white/70">2019</div>
+</article><!-- Novata Espacial -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula445.html">
     <img src="https://image.tmdb.org/t/p/original/oYx9AVIrZaVZ2PezSZvOOjtB75a.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
