--- a/Plataforma/fox/index.html
+++ b/Plataforma/fox/index.html
@@ -159,7 +159,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El llamado salvaje -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Prison Break -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Series/serie60.html">
+    <img src="https://image.tmdb.org/t/p/original/oqy7vnLWIFwoKBimCQfJHoVRYTS.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Prison Break</div>
+  <div class="text-xs text-white/70">2005</div>
+</article><!-- El llamado salvaje -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula473.html">
     <img src="https://image.tmdb.org/t/p/original/2KlzkeqqmXaDdXo7D6pq7qQLJoM.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
