--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- The Boys -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Prison Break -->
+<li>
+  <a href="../Series/serie60.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/oqy7vnLWIFwoKBimCQfJHoVRYTS.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Prison Break 2005</span>
+    <span class="hidden">Una conspiración política hace que un hombre inocente sea enviado a prisión y condenado a muerte. Su única esperanza es su hermano, que crea un complejo y detallado plan en el que logra enviado a la misma prisión para ejecutar una fuga desde adentro.</span>
+  </a>
+</li>
+<!--FIN--><!-- The Boys -->
 <li>
   <a href="../Series/serie59.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
