--- a/Series/serie60.html
+++ b/Series/serie60.html
@@ -87,7 +87,106 @@ var serieActual = {
   poster: "https://image.tmdb.org/t/p/original/oqy7vnLWIFwoKBimCQfJHoVRYTS.jpg"
 };
 
-var videosPorCapitulo = {"1":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":""},"2":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":""},"3":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":""},"4":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":""},"5":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":""}};
+var videosPorCapitulo = {
+  "1": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/mpbwf8hteryi",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/84453vurgrz7",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/7uk7too7ocsd",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/6i8lpazm5yfv",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/xe2wgfqjmz4s",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/s9ybq6tsp9ow",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/9708u2g73681",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/aslvhj895fwg",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/cktl1fxseh9i",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/73o739j88rb2",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/k3ymbwnf0z0x",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/76adhizz92ud",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/0pelntblowj3",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/thri3k08y8v9",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/skaux4uhujf1",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/5hctwqxic54g",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/w2zrxvunr4rm",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/pwyl5by2s88e",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/u7fwj8oauez9",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/9ffjst1in3ys",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/e0lh2avd2b9u",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/cz6sefvoj47e"
+  },
+  "2": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/wh0udd1q6enh",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/t9o5vx3mhwkn",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/jwafkfpsdxyc",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/y42s4he11o8w",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/19162gqvm5b6",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/buy1ka0oyaiq",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/5o2930czb5ee",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/3ece0wehhmdq",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/yrbmy9br6hd5",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/g3pimuv7xdx8",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/uq20ibpkb7m4",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/3n2appm1gzt3",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/9g6vvkk3o4pv",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/siirzujk73f3",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/vnb78o2wwtjd",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/hgkcgaafawtm",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/0ldyjhc8mjeh",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/8gji1f27ku8w",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/jtreco2cnku9",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/vyx5o4okusbc",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/sv4ls3wy4asb",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/y5mel2xlurb4"
+  },
+  "3": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/rjy58ccjcpy7",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/9hjeqzu9zmff",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/k0rdqj6auxyd",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/vy9lmjebw41y",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/vlm6gdg7j8ot",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/rtk3bvsxlcqs",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/1ob3a522n4s4",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/y15vyf3ihxxh",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/b4mtjd8hmxew",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/ebuyciegcdgz",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/1zjozudeyftm",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/qddz31m2mclz",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/unh680triv73"
+  },
+  "4": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/l7fyrq685mkp",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/rg8hpkeamw2c",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/ym9g968d2h32",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/v3a12rhigl6q",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/d6ja6bw31763",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/are53wd3qphr",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/nffawvofxulq",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/rg5913ihtzbg",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/6qiyzzr7d6we",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/nw2m7b4a9bpj",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/mpg1x9q2t316",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/41y3c3jiipyn",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/7dnu5qfyv2py",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/qwephxbqxsiv",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/8pvmgspea82c",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/e9cqpvm5xx3d",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/z9c9sjfms4ux",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/hqgz41ztmu8x",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/e38y61iwas6n",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/ka04quaxr59x",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/7pmoy9wacf6p",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/1j1exz3ymteu"
+  },
+  "5": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/tj8gx5y7r2t7",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/23ahm8waxlej",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/ttnmyuesi0nr",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/mm95rjhedqc9",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/3i647fbl2ytc",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/8wdzpnrj3ehd",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/x3z32lomzwzt",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/8abshza0gl1x",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/0byxlwce34q9"
+  }
+};
 
 function guardarTemporada(temporada) {
   localStorage.setItem("temporadaSeleccionada_" + serieId, temporada);
