--- a/Series/serie61.html
+++ b/Series/serie61.html
@@ -87,7 +87,173 @@ var serieActual = {
   poster: "https://image.tmdb.org/t/p/original/snKUzvCl3kGv0RWBjEjnOXMGvdl.jpg"
 };
 
-var videosPorCapitulo = {"1":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":""},"2":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":""},"3":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":"","24":""},"4":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":"","23":"","24":""},"5":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":""},"6":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":"","14":"","15":"","16":"","17":"","18":"","19":"","20":"","21":"","22":""},"7":{"1":"","2":"","3":"","4":"","5":"","6":"","7":"","8":"","9":"","10":"","11":"","12":"","13":""}};
+var videosPorCapitulo = {
+  "1": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/dnwala7lag9s",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/6zwq1ccaznlm",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/cjufr50hkv1u",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/b4tv5w8w0gty",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/kk3bgia6ifcp",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/fxo2n7sazjif",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/se546r6hjv94",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/62uspx5q2z5y",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/9cma6r3a7ybf",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/45ef51hj9fjp",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/fp1uxxrgvsx9",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/guc54d0hnk2r",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/n6iehqa9hg2b",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/76xfwl6z9yub",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/jh4d9mbkfcx4",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/k2vcqs1pq8z2",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/s4s7zigkrqo0",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/5p11svtygo7t",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/3ehyy00rgkms",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/hy1lcnjausla",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/wro656wclyo7",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/6ow1j6prhvnq",
+    "23": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/t3vkf6vlinn5"
+  },
+  "2": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/zr6ij4536zyy",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/gpi9jvpl1kal",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/eg8ct2cl4ukf",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/91xlvzdrr497",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/o8vk0x5iu716",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/07x3gl7rr6vy",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/j0ni5dkbenpl",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/9w4a1230n48e",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/xk03lz12mun4",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/2qgjaiablssk",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/afc9zlvl0mjo",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/c5obc3zonw4w",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/wado1phke4fu",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/py3m8p8v3hnq",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/lbhfox5dx7ye",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/nuo4xso7lq52",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/3c3f4fgf3e5a",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/jhg9lbzzsk16",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/21zbrryd63mr",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/oj64r3n3es20",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/z6o5j2plahwp",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/h09jyg1ofg43",
+    "23": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/sjo60v61gsx4"
+  },
+  "3": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/z3uht7dm2rb4",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/spg764zsm2x7",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/tkmc4vcdag1s",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/18z56lu0vt3j",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/pva6nigffn7a",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/pm5z46nj5g8a",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/ls1vlmfmthh7",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/4cg8olh47bde",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/skfs809i5tw3",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/exvndhouuqxe",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/tsfp4fz4x6gi",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/fy0z41i6tg1x",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/mdylukvmi19w",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/7f6dfi8rqrfh",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/wyjzmo500v53",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/sp3sxgmewmn8",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/zw41309csz33",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/tzqpcl07kf9h",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/v85y1z3jj7wr",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/l1zgbadqzu9f",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/52wl66kdrf9v",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/wot6ek8r1pk2",
+    "23": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/oebym3hxew0l",
+    "24": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/qnk2wa5uopm0"
+  },
+  "4": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/3srhlp0700wd",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/bz8gg4ttuft2",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/7wcxh585cq5q",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/hcs7k373r12i",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/isxr0tviafef",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/r7zql39r13lt",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/si1njove1kp3",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/9rjbbk1grsrb",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/komb5t4or86h",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/n929fzez392k",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/vvzfyxgx5umi",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/5z9g5lbb2ri8",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/lybcne6q53oi",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/5grimgsa9mu1",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/zctwk3j6rkol",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/qgd8lrdsjbva",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/oxe36jhc0e0q",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/2tbxzl85m1u0",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/cocjdq7a3qf8",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/ojptf33yeztr",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/37vvvpd0uvuc",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/s4z1zn5xgr62",
+    "23": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/bs2v82xhgdt7",
+    "24": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/hzhxp0vqba4j"
+  },
+  "5": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/a47cxj77id6a",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/u4byun62mncm",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/qipx11yejxtd",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/xclpa5u21tkw",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/aevivlbnlg48",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/oufg11wxcbhx",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/lq3tn75qrp0o",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/emn74b8prhb9",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/nmz5u2sq480s",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/mkudwxo27dkj",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/j7rhfqka6nvk",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/xh82ggf6fqop",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/a473u1ayldrn",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/x4gxw1i3ltv7",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/6vo5cvu0ipkh",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/uqn7kiumpiiv",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/6ql7s0dq1vs8",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/aquzgrzf3nbb",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/klqz08i5byx1",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/14tzjvhc3h4t",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/5r8s4g1vxgq9",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/3mo2ohtf5rc6"
+  },
+  "6": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/ty2c8gbmnofs",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/jpet6e1wmus9",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/zek79jy86422",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/ipaj2ed2l5tv",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/u09n5kyk11hw",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/q7quzr9sf8cz",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/858gxu6gmof9",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/j9dmocfps9yk",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/4huc0fhhips2",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/2wuwn9pyz455",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/k0l13bs9wq84",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/py9fr1fe78nq",
+    "13": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/vdm8idez2noy",
+    "14": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/jxrjbccp2pym",
+    "15": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/ny75hrqlpocv",
+    "16": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/9cgsldrtmf15",
+    "17": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/hkgyhdiu02ki",
+    "18": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/4h6hiizxr3bt",
+    "19": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/ixqpff2lprmc",
+    "20": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/kyrinxjf5wux",
+    "21": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/sc7c3xjphp90",
+    "22": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/pdo0gokgx60t"
+  },
+  "7": {
+    "1": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/nq61mghx0mlc",
+    "2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/v8hw8lix2rr4",
+    "3": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/kmy9oem3zqbb",
+    "4": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/a3gein7a00uz",
+    "5": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/5mylq0oq2b3t",
+    "6": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/lnw6ut0ax83j",
+    "7": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/kdq8uc05cfil",
+    "8": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/jvsqbg77klnh",
+    "9": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/9cx9dfcf48x1",
+    "10": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/9kklbxqu7f0w",
+    "11": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/cptwdeapnht0",
+    "12": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/o3kopvhapwqf",
+    "13": "https://lzfreeplayer.blogspot.com/?player=jwpl&provider=rand&format=video%2Fmp4&link=https%3A%2F%2Frumble.com%2Fhls-vod%2F6tmc13%2Fplaylist.m3u8"
+  }
+};
 
 function guardarTemporada(temporada) {
   localStorage.setItem("temporadaSeleccionada_" + serieId, temporada);
