Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -147,7 +147,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Mentalista -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Siete Pecados Capitales -->
+<li>
+  <a href="../Series/serie62.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/yhmHgYvxj1Xez3q6pJKxQVFiP4S.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Siete Pecados Capitales 2014</span>
+    <span class="hidden">Los Siete Pecados Capitales fueron una los protectores del Reino de Liones, pero tras un supuesto intento de golpe de estado, fueron enviados al exilio. Diez años después, los Caballeros Sagrados (supuestos salvadores del reino) toman el poder por la fuerza, formando un gobierno tiránico. Elizabeth, la tercera princesa Liones, iniciará entonces un viaje para intentar reunir a los Siete Pecados Capitales y convencerlos de ayudarla a recuperar el reino.</span>
+  </a>
+</li>
+<!--FIN--><!-- El Mentalista -->
 <li>
   <a href="../Series/serie61.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
